css/main.css
html, body {
  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
  margin: 0;
  border: 0;
  font-size: 100%;
  -webkit-font-smoothing: antialised;
  max-width: 900px;
  padding-top: 30px;
  padding-left: 40px;
  padding-right: 40px;
}

main {
  background-color: #ffffff;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.5em;
}

h1 {
  font-size: 48px;
  font-weight: 650;
}

a {
  text-decoration: none;
  font-weight: 450;
}

a[href^="mailto:"] {
  color: #636363;
}

a:hover {
    color: #7f8c8d;
}

a.progressive {
  background-image: linear-gradient(90deg, rgba(214,18,4,1) 0%, rgba(245,130,32,1) 100%);
  background-size: 100%;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

footer {
  font-size: 16px;
  font-weight: 500;
  color: #d4d4d4;
  padding-top: 20px;
  line-height: 1.5em;
  padding-bottom: 20px;
}

@media (prefers-color-scheme: dark) {
  body, main {
    background-color: #0f0f0f;
    color: #ffffff;
  }

  a[href^="mailto:"] {
    color: #b3b3b3;
  }

  footer {
    color: #4f4f4f;
  }
}

